[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/CollegiateBlackFLF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/SummaryPanel.gd" type="Script" id=2]
[ext_resource path="res://audio/sound_effect/clap.mp3" type="AudioStream" id=3]
[ext_resource path="res://art/star.png" type="Texture" id=4]
[ext_resource path="res://UI/theme/theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 1 )

[node name="SummaryPanel" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 2 )

[node name="Clap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true
bus = "SFX"

[node name="Panel" type="Panel" parent="."]
margin_left = 348.0
margin_top = 92.0
margin_right = 863.0
margin_bottom = 603.0
theme = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 121.0
margin_top = 18.0
margin_right = 392.0
margin_bottom = 75.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]summary[/center]"
text = "summary"

[node name="RestartButton" type="Button" parent="Panel"]
margin_left = 67.0
margin_top = 415.0
margin_right = 223.0
margin_bottom = 458.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/RestartButton"]
margin_left = 4.0
margin_top = 9.0
margin_right = 151.0
margin_bottom = 37.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]restart[/center]"
text = "restart"

[node name="MainMenuButton" type="Button" parent="Panel"]
margin_left = 277.0
margin_top = 415.0
margin_right = 433.0
margin_bottom = 458.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MainMenuButton"]
margin_left = 4.0
margin_top = 9.0
margin_right = 151.0
margin_bottom = 37.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]main menu[/center]"
text = "main menu"

[node name="Label" type="RichTextLabel" parent="Panel"]
margin_left = 97.5
margin_top = 212.0
margin_right = 310.5
margin_bottom = 252.0
custom_fonts/normal_font = SubResource( 6 )
text = "Order Finished"

[node name="Label3" type="RichTextLabel" parent="Panel"]
margin_left = 129.5
margin_top = 252.0
margin_right = 316.5
margin_bottom = 292.0
custom_fonts/normal_font = SubResource( 7 )
text = "order failed"

[node name="Label4" type="RichTextLabel" parent="Panel"]
margin_left = 135.5
margin_top = 293.0
margin_right = 302.5
margin_bottom = 333.0
custom_fonts/normal_font = SubResource( 8 )
text = "coin earned"

[node name="Label2" type="RichTextLabel" parent="Panel"]
margin_left = 171.5
margin_top = 333.0
margin_right = 299.5
margin_bottom = 364.0
custom_fonts/normal_font = SubResource( 9 )
text = "coin lost"

[node name="OrderFinishedText" type="RichTextLabel" parent="Panel"]
modulate = Color( 0.588235, 0.937255, 0.462745, 1 )
margin_left = 281.0
margin_top = 213.0
margin_right = 381.0
margin_bottom = 241.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[right]1234[/right]"
text = "1234"
scroll_active = false

[node name="OrderFailedText" type="RichTextLabel" parent="Panel"]
modulate = Color( 0.937255, 0.462745, 0.462745, 1 )
margin_left = 279.5
margin_top = 253.0
margin_right = 379.5
margin_bottom = 281.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[right]1234[/right]"
text = "1234"
scroll_active = false

[node name="CoinEarnedText" type="RichTextLabel" parent="Panel"]
modulate = Color( 0.588235, 0.937255, 0.462745, 1 )
margin_left = 281.0
margin_top = 294.0
margin_right = 381.0
margin_bottom = 322.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[right]1234[/right]"
text = "1234"
scroll_active = false

[node name="CoinLostText" type="RichTextLabel" parent="Panel"]
modulate = Color( 0.937255, 0.462745, 0.462745, 1 )
margin_left = 279.5
margin_top = 334.0
margin_right = 379.5
margin_bottom = 362.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[right]1234[/right]"
text = "1234"
scroll_active = false

[node name="Star" type="Sprite" parent="Panel"]
position = Vector2( 143.25, 125.75 )
scale = Vector2( 0.0921053, 0.0921053 )
texture = ExtResource( 4 )

[node name="Star2" type="Sprite" parent="Panel"]
position = Vector2( 247.25, 126.75 )
scale = Vector2( 0.0921053, 0.0921053 )
texture = ExtResource( 4 )

[node name="Star3" type="Sprite" parent="Panel"]
position = Vector2( 353.25, 126.75 )
scale = Vector2( 0.0921053, 0.0921053 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
